# ArenaSync-AI---FIFA-World-Cup-2026-Stadium-Platform

./: .dockerignore  .gitignore  CODE_QUALITY.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: pylint.yml
app/: config.py  main.py
app/routers/: assistant.py  operations.py  sustainability.py
app/schemas/: models.py
app/services/: groq_service.py  rag_store.py  simulator.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
tests/: test_agents.py  test_api_endpoints.py  test_code_quality.py  test_config.py  test_context_engine.py  test_efficiency.py  test_llm.py  test_rag_store.py  test_schemas.py  test_security.py  test_simulator.py  test_static.py
